# rpi-tree

moving-sensor/: CMakeLists.txt  main.cpp  mv_sensor.cpp  mv_sensor.h
python_first_steps/: README  main.py  pr.py
qml_cmake/: CMakeLists.txt  main.cpp  main.qml  qml.qrc  testhandler.cpp  testhandler.h
qt_cmake/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  make_imx8
ultrasonic-sensor/: CMakeLists.txt  main.cpp  us_sensor.cpp  us_sensor.h
